# sctracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: config.hpp  utils.hpp
include/bvh/: bb.hpp  bvh.hpp  flattenbvh.hpp
include/core/: camera.hpp  instance.hpp  light.hpp  material.hpp  mesh.hpp  scene.hpp  texture.hpp
include/cpu/: cpurenderer.hpp  cpushader.hpp  integrator.hpp  tonemap.hpp
include/gpu/: program.hpp  shader.hpp
include/importer/: importer.hpp
include/importer/maya/: parser.hpp
include/importer/pbrt/: parser.hpp
include/utils/: glUtils.hpp  mathUtils.hpp
include/window/: quad.hpp  renderer.hpp  window.hpp
shaders/: Imagemap.glsl  accumulate.glsl  debugger.frag  debugger.glsl  debugger.vert  pathtracer.glsl  pathtracer_low_resolution.glsl  tonemap.glsl
shaders/basic/: fragment.glsl  vertex.glsl
shaders/include/: anyhit.glsl  closest_hit.glsl  globals.glsl  phong.glsl  traceray.glsl  uniforms.glsl
src/: CMakeLists.txt  config.cpp  main.cpp
src/bvh/: bb.cpp  bvh.cpp  flattenbvh.cpp
src/core/: camera.cpp  material.cpp  mesh.cpp  scene.cpp  texture.cpp
src/cpu/: closet_hit.cpp  cpushader.cpp  directlight.cpp  disney.cpp  hit.cpp  intersection.cpp  sampling.cpp
src/utils/: glUtils.cpp  mathUtils.cpp
src/window/: quad.cpp  renderer.cpp  window.cpp
